# pinecil_lib

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ble.py  crx_uuid_name_map.py  pinecil.py  pinecil_setting_limits.py  pyproject.toml  test_ble.py  test_pinecil.py
.github/scripts/: semver.py
.github/workflows/: ci.yml  lint-test.yml
src/pinecil/: __init__.py  ble.py  pinecil.py  pinecil_setting_limits.py
tests/: test_ble.py  test_data.py  test_pinecil.py
