[tool.poetry]
name = "pinecil"
version = "0.2.12"
description = "A python interface for Pinecil V2 controls and settings."
authors = ["builder555 <85308587+builder555@users.noreply.github.com>"]
license = "MIT-0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
bleak = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.23.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
